# sdl2-pong

./: CMakeLists.txt  README.md
include/: aabb.h  ball.h  center_line.h  court_scene.h  endgame_scene.h  game.h  goal.h  paddle.h  scene.h  score_indicator.h  wall.h  welcome_scene.h
src/: aabb.cpp  ball.cpp  center_line.cpp  court_scene.cpp  endgame_scene.cpp  game.cpp  goal.cpp  main.cpp  paddle.cpp  score_indicator.cpp  wall.cpp  welcome_scene.cpp
